--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@ The Department has established its creditability and has proven its excellence w
                                 <div class="testi-desc">
                                     <h4 class="testi-name">Sthitiprangya Singh</h4>
                                     <p>
-                                        My teachers have taught me the techniques to teach technology, even to the nontechnical mind through only two words : Proper Guidance.
+                                        My teachers have taught me the techniques to teach technology, even to the nontechnical mind through only two words : Proper Guidance.</p>
                             </div>
                             <div class="testimonial-item">
                                 <div class="testi-img">
