--- a/index.html
+++ b/index.html
@@ -485,8 +485,10 @@ The Department has established its creditability and has proven its excellence w
                                 <div class="testi-desc">
                                     <h4 class="testi-name">Sthitiprangya Singh</h4>
                                     <p>
-                                        My teachers have taught me the techniques to teach technology, even to the nontechnical mind through only two words : Proper Guidance.</p>
-                            </div>
+                                        My teachers have taught me the techniques to teach technology, even to the nontechnical mind through only two words : Proper Guidance.
+				    </p>
+                                </div>
+			    </div>
                             <div class="testimonial-item">
                                 <div class="testi-img">
                                     <img src="images/testimonial/4.jpg" alt="Suryakant">
