--- a/index.html
+++ b/index.html
@@ -379,30 +379,30 @@ With this, I welcome you to be a part of our journey towards being a centre of e
 	                            <div class="event-item-new mb-10">
 	                                <div class="event-date">
 	                                    <div class="vertical-align">
-	                                        <span class="day">10</span>
-	                                        <span class="month">Aug</span>
+	                                        <span class="day">12</span>
+	                                        <span class="month">April</span>
 	                                    </div>
 	                                </div>
 	                                <div class="event-des">
 	                                    <h4 class="title">
-	                                        Kids Study Tour 2020.
+	                                        Farewell for 2020-23 batch
 	                                    </h4>
-	                                    <p>Event Description. A party is a gathering of people who have been invited by a host for the purposes of… </p>
+	                                    <p>Farewell Ceremoney organized by 1st yr and 2nd yr students of department </p>
 
 	                                </div>
 	                            </div>
 	                            <div class="event-item-new mb-10">
 	                                <div class="event-date">
 	                                    <div class="vertical-align">
-	                                        <span class="day">05</span>
-	                                        <span class="month">Aug</span>
+	                                        <span class="day">20</span>
+	                                        <span class="month">Nov</span>
 	                                    </div>
 	                                </div>
 	                                <div class="event-des">
 	                                    <h4 class="title">
-	                                        Kids Drawing Content
+	                                        Upcoming National Conference
 	                                    </h4>
-	                                    <p>Event Description. A party is a gathering of people who have been invited by a host for the purposes of… </p>
+	                                    <p>A National Conference will be organized by department in the month of November 2023(Tentatively)</p>
 
 	                                </div>
 	                            </div>
