--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@ With this, I welcome you to be a part of our journey towards being a centre of e
 	                                    <h4 class="title">
 	                                        Upcoming National Conference
 	                                    </h4>
-	                                    <p>A National Conference will be organized by department in the month of November 2023(Tentatively)</p>
+	                                    <p>A National Conference will be organized by department in the month of Nov(Tentatively)</p>
 
 	                                </div>
 	                            </div>
