--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@ The Department has established its creditability and has proven its excellence w
         <div id="rs-testimonial" class="rs-testimonial bg5 sec-spacer">
             <div class="container">
                 <div class="sec-title mb-50">
-                    <h2 class="white-color">WHAT STUDENT SAYS</h2>      
+                    <h2 class="white-color">Testimonials</h2>      
                 </div>
                 <div class="row">
                     <div class="col-md-12">
