--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                                             </li>
                                             <li class="menu-item-has-children"> <a href="javascript:void(0)">Academic</a>
                                                 <ul class="sub-menu">
-                                                    <li> <a href="javascript:void(0)">Syllabus</a></li>
+                                                    <li> <a href="model syllabus cs.pdf">Syllabus</a></li>
                                                     <li><a href="javascript:void(0)">Result</a></li>
                                                 </ul>
                                             </li>
