--- a/index.html
+++ b/index.html
@@ -150,14 +150,15 @@
 											<li class="active"> <a href="index.html" class="home">Home</a></li>
                                             <li class="menu-item-has-children"> <a href="javascript:void(0)">About</a>
                                                 <ul class="sub-menu">
-                                                    <li> <a href="javascript:void(0)">History</a></li>
-                                                    <li><a href="javascript:void(0)">HOD's Message</a></li>
-                                                    <li><a href="javascript:void(0)">Mission</a></li>
-                                                    <li><a href="javascript:void(0)">Vision</a></li>
+                                                    <li> <a href="index.html">History</a></li>
+                                                    <li><a href="index.html">HOD's Message</a></li>
+                                                    <li><a href="index.html">Mission</a></li>
+                                                    <li><a href="index.html">Vision</a></li>
                                                 </ul>
                                             </li>
-                                            <li class="menu-item-has-children"> <a href="javascript:void(0)">Academic</a>
+                                            <li class="menu-item-has-children"> <a href="javascript:void(0)">Academics</a>
                                                 <ul class="sub-menu">
+						    <li> <a href="javascript:void(0)">Courses</a></li>
                                                     <li> <a href="model syllabus cs.pdf">Syllabus</a></li>
                                                     <li><a href="javascript:void(0)">Result</a></li>
                                                 </ul>
