--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 
 							            <div class="acme-news-ticker-box">
 							                <ul class="my-news-ticker-2">
-							                    <li><a href="#">Welcme to Kendrapara Autonomous College</a></li>
+							                    <li><a href="www.kac.edu.in">Welcme to Kendrapara Autonomous College</a></li>
 							                    
 							                    <li><a href="#">It is a NAAC Accredited Institute</a></li>
-							                    <li><a href="#">Courses are recognized by Utkal University, Bhubaneswar</a></li>
+							                    <li><a href="www.utkaluniversity.ac.in">Courses are recognized by Utkal University, Bhubaneswar</a></li>
 							                    <li><a href="#">Well Infrastructure, academic environment, Anti-Ragging and Wi-Fi campus</a></li>
 							                    <li><a href="#">Excellent placement records</a></li>
 							                    <li><a href="#">Well equipped Labs, Library, Conference Hall and Smart Class-rooms</a></li>
@@ -585,16 +585,16 @@ The Department has established its creditability and has proven its excellence w
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-3 col-md-12">
-                        	<h5 class="footer-title">ACADEMIC</h5>
+                        	<h5 class="footer-title">QUICK LINKS</h5>
                             <ul class="sitemap-widget">                             
-                                <li><a href="javascript:void(0)"><i class="fa fa-angle-right" aria-hidden="true"></i>History</a></li>
-                                <li><a href="javascript:void(0)"><i class="fa fa-angle-right" aria-hidden="true"></i>HOD's Message</a></li>
-                                <li><a href="javascript:void(0)"><i class="fa fa-angle-right" aria-hidden="true"></i>News</a></li>
-                                <li><a href="javascript:void(0)"><i class="fa fa-angle-right" aria-hidden="true"></i>Notice</a></li>
+                                <li><a href="www.kac.edu.in"><i class="fa fa-angle-right" aria-hidden="true"></i>College</a></li>
+                                <li><a href="javascript:void(0)"><i class="fa fa-angle-right" aria-hidden="true"></i>Faculty</a></li>
+                                <li><a href="javascript:void(0)"><i class="fa fa-angle-right" aria-hidden="true"></i>Courses</a></li>
+                                <li><a href="javascript:void(0)"><i class="fa fa-angle-right" aria-hidden="true"></i>Gallery</a></li>
                             </ul>
                         </div>
                         <div class="col-lg-3 col-md-12">
-                            <h5 class="footer-title">ADMINISTRATION</h5>
+                            <h5 class="footer-title">USEFUL LINKS</h5>
                             <ul class="sitemap-widget">                             
                                 <li><a href="javascript:void(0)"><i class="fa fa-angle-right" aria-hidden="true"></i>Syllabus</a></li>
                                 <li><a href="javascript:void(0)"><i class="fa fa-angle-right" aria-hidden="true"></i>Result</a></li>
@@ -603,7 +603,7 @@ The Department has established its creditability and has proven its excellence w
                             </ul>
                         </div>
                         <div class="col-lg-3 col-md-12">
-                            <h5 class="footer-title">DEPARTMENT</h5>
+                            <h5 class="footer-title">OTHER LINKS</h5>
                             <ul class="sitemap-widget">
                                 <li><a href="javascript:void(0)"><i class="fa fa-angle-right" aria-hidden="true"></i>Faculty</a></li>
                                 <li><a href="javascript:void(0)"><i class="fa fa-angle-right" aria-hidden="true"></i>Alumni</a></li>
