--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@ The Department has established its creditability and has proven its excellence w
                         <div class="col-lg-3 col-md-12">
                         	<h5 class="footer-title">QUICK LINKS</h5>
                             <ul class="sitemap-widget">                             
-                                <li><a href="www.kac.edu.in"><i class="fa fa-angle-right" aria-hidden="true"></i>College</a></li>
+                                <li><a href="http://kac.edu.in/"><i class="fa fa-angle-right" aria-hidden="true"></i>College</a></li>
                                 <li><a href="javascript:void(0)"><i class="fa fa-angle-right" aria-hidden="true"></i>Faculty</a></li>
                                 <li><a href="javascript:void(0)"><i class="fa fa-angle-right" aria-hidden="true"></i>Courses</a></li>
                                 <li><a href="javascript:void(0)"><i class="fa fa-angle-right" aria-hidden="true"></i>Gallery</a></li>
@@ -596,10 +596,10 @@ The Department has established its creditability and has proven its excellence w
                         <div class="col-lg-3 col-md-12">
                             <h5 class="footer-title">USEFUL LINKS</h5>
                             <ul class="sitemap-widget">                             
-                                <li><a href="javascript:void(0)"><i class="fa fa-angle-right" aria-hidden="true"></i>Syllabus</a></li>
-                                <li><a href="javascript:void(0)"><i class="fa fa-angle-right" aria-hidden="true"></i>Result</a></li>
-                                <li><a href="javascript:void(0)"><i class="fa fa-angle-right" aria-hidden="true"></i>Campus</a></li>
-                                <li><a href="javascript:void(0)"><i class="fa fa-angle-right" aria-hidden="true"></i>Contacts</a></li>
+                                <li><a href="javascript:void(0)"><i class="fa fa-angle-right" aria-hidden="true"></i>SWAYAM</a></li>
+                                <li><a href="javascript:void(0)"><i class="fa fa-angle-right" aria-hidden="true"></i>MOOC</a></li>
+                                <li><a href="javascript:void(0)"><i class="fa fa-angle-right" aria-hidden="true"></i>SPOKEN TUTORIAL</a></li>
+                                <li><a href="javascript:void(0)"><i class="fa fa-angle-right" aria-hidden="true"></i>CodeChef</a></li>
                             </ul>
                         </div>
                         <div class="col-lg-3 col-md-12">
