--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 
 							            <div class="acme-news-ticker-box">
 							                <ul class="my-news-ticker-2">
-							                    <li><a href="www.kac.edu.in">Welcme to Kendrapara Autonomous College</a></li>
+							                    <li><a href="http://kac.edu.in/">Welcme to Kendrapara Autonomous College</a></li>
 							                    
 							                    <li><a href="#">It is a NAAC Accredited Institute</a></li>
-							                    <li><a href="www.utkaluniversity.ac.in">Courses are recognized by Utkal University, Bhubaneswar</a></li>
+							                    <li><a href="https://utkaluniversity.ac.in/">Courses are recognized by Utkal University, Bhubaneswar</a></li>
 							                    <li><a href="#">Well Infrastructure, academic environment, Anti-Ragging and Wi-Fi campus</a></li>
 							                    <li><a href="#">Excellent placement records</a></li>
 							                    <li><a href="#">Well equipped Labs, Library, Conference Hall and Smart Class-rooms</a></li>
@@ -588,18 +588,18 @@ The Department has established its creditability and has proven its excellence w
                         	<h5 class="footer-title">QUICK LINKS</h5>
                             <ul class="sitemap-widget">                             
                                 <li><a href="http://kac.edu.in/"><i class="fa fa-angle-right" aria-hidden="true"></i>College</a></li>
-                                <li><a href="javascript:void(0)"><i class="fa fa-angle-right" aria-hidden="true"></i>Faculty</a></li>
+                                <li><a href="https://cskac.in/faculty.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Faculty</a></li>
                                 <li><a href="javascript:void(0)"><i class="fa fa-angle-right" aria-hidden="true"></i>Courses</a></li>
-                                <li><a href="javascript:void(0)"><i class="fa fa-angle-right" aria-hidden="true"></i>Gallery</a></li>
+                                <li><a href="https://cskac.in/gallery.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Gallery</a></li>
                             </ul>
                         </div>
                         <div class="col-lg-3 col-md-12">
                             <h5 class="footer-title">USEFUL LINKS</h5>
                             <ul class="sitemap-widget">                             
-                                <li><a href="javascript:void(0)"><i class="fa fa-angle-right" aria-hidden="true"></i>SWAYAM</a></li>
-                                <li><a href="javascript:void(0)"><i class="fa fa-angle-right" aria-hidden="true"></i>MOOC</a></li>
-                                <li><a href="javascript:void(0)"><i class="fa fa-angle-right" aria-hidden="true"></i>SPOKEN TUTORIAL</a></li>
-                                <li><a href="javascript:void(0)"><i class="fa fa-angle-right" aria-hidden="true"></i>CodeChef</a></li>
+                                <li><a href="https://swayam.gov.in/"><i class="fa fa-angle-right" aria-hidden="true"></i>SWAYAM</a></li>
+                                <li><a href="https://www.mooc.org/"><i class="fa fa-angle-right" aria-hidden="true"></i>MOOC</a></li>
+                                <li><a href="https://spoken-tutorial.org/??/"><i class="fa fa-angle-right" aria-hidden="true"></i>SPOKEN TUTORIAL</a></li>
+                                <li><a href="https://www.codechef.com/"><i class="fa fa-angle-right" aria-hidden="true"></i>CodeChef</a></li>
                             </ul>
                         </div>
                         <div class="col-lg-3 col-md-12">
@@ -623,10 +623,10 @@ The Department has established its creditability and has proven its excellence w
                     <div class="footer-share">
                         <ul>
                             <li><a href="javascript:void(0)"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="javascript:void(0)"><i class="fa fa-google-plus"></i></a></li>
+                            <li><a href="https://www.youtube.com/@CompScKAC-nh4tu/featured"><i class="fa fa-youtube"></i></a></li>
                             <li><a href="https://twitter.com/Kdp_Auto_Clg?t=rq8jkxM3V3dSMHsphnnmQw&s=08"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="javascript:void(0)"><i class="fa fa-pinterest-p"></i></a></li>
-                            <li><a href="javascript:void(0)"><i class="fa fa-vimeo"></i></a></li>    
+                              
                         </ul>
                     </div>                                
                 </div>
