--- a/gallery.html
+++ b/gallery.html
@@ -290,11 +290,11 @@
             		</div>
             		<div class="col-lg-3 col-md-6">
             			<div class="gallery-item">
-            			    <img src="images/gallery/5.jpg" alt="Gallery Image" />
+            			    <img src="images/ByteQuest.jpeg" alt="Gallery Image" />
             			    <div class="gallery-desc">
-            					<h3><a href="#">Photo Title Here</a></h3>
-            					<p>There are many variations of Lorem Ipsum available</p>
-            					<a class="image-popup" href="images/gallery/5.jpg" title="Photo Title Here">
+            					<h3><a href="#">Byte Quest 1.0</a></h3>
+            					<p>Departmental Quiz Competition before Fresher Party 2023</p>
+            					<a class="image-popup" href="images/ByteQuest.jpeg" title="Byte Quest 1.0 2023">
             						<i class="fa fa-search"></i>
             					</a>
             			    </div>
