--- a/gallery.html
+++ b/gallery.html
@@ -300,6 +300,58 @@
             			    </div>
             			</div>
             		</div>
+
+			<div class="col-lg-3 col-md-6">
+            			<div class="gallery-item">
+            			    <img src="images/welcome 2023.jpeg" alt="Gallery Image" />
+            			    <div class="gallery-desc">
+            					<h3><a href="#">Welcome Ceremony 2023</a></h3>
+            					<p>Fresher Party 2023</p>
+            					<a class="image-popup" href="images/welcome 2023.jpeg" title="Welcome Ceremony 2023">
+            						<i class="fa fa-search"></i>
+            					</a>
+            			    </div>
+            			</div>
+            		</div>
+
+			<div class="col-lg-3 col-md-6">
+            			<div class="gallery-item">
+            			    <img src="images/ByteQuest.jpeg" alt="Gallery Image" />
+            			    <div class="gallery-desc">
+            					<h3><a href="#">Byte Quest 1.0</a></h3>
+            					<p>Departmental Quiz Competition before Fresher Party 2023</p>
+            					<a class="image-popup" href="images/ByteQuest.jpeg" title="Byte Quest 1.0 2023">
+            						<i class="fa fa-search"></i>
+            					</a>
+            			    </div>
+            			</div>
+            		</div>
+
+			<div class="col-lg-3 col-md-6">
+            			<div class="gallery-item">
+            			    <img src="images/ByteQuest.jpeg" alt="Gallery Image" />
+            			    <div class="gallery-desc">
+            					<h3><a href="#">Byte Quest 1.0</a></h3>
+            					<p>Departmental Quiz Competition before Fresher Party 2023</p>
+            					<a class="image-popup" href="images/ByteQuest.jpeg" title="Byte Quest 1.0 2023">
+            						<i class="fa fa-search"></i>
+            					</a>
+            			    </div>
+            			</div>
+            		</div>
+
+			<div class="col-lg-3 col-md-6">
+            			<div class="gallery-item">
+            			    <img src="images/ByteQuest.jpeg" alt="Gallery Image" />
+            			    <div class="gallery-desc">
+            					<h3><a href="#">Byte Quest 1.0</a></h3>
+            					<p>Departmental Quiz Competition before Fresher Party 2023</p>
+            					<a class="image-popup" href="images/ByteQuest.jpeg" title="Byte Quest 1.0 2023">
+            						<i class="fa fa-search"></i>
+            					</a>
+            			    </div>
+            			</div>
+            		</div>
             		<div class="col-lg-3 col-md-6">
             			<div class="gallery-item">
             			    <img src="images/gallery/1.jpg" alt="Gallery Image" />
