--- a/gallery.html
+++ b/gallery.html
@@ -316,11 +316,11 @@
 
 			<div class="col-lg-3 col-md-6">
             			<div class="gallery-item">
-            			    <img src="images/ByteQuest.jpeg" alt="Gallery Image" />
+            			    <img src="images/firstAutonomySeminar2023-24.jpeg" alt="Gallery Image" />
             			    <div class="gallery-desc">
-            					<h3><a href="#">Byte Quest 1.0</a></h3>
-            					<p>Departmental Quiz Competition before Fresher Party 2023</p>
-            					<a class="image-popup" href="images/ByteQuest.jpeg" title="Byte Quest 1.0 2023">
+            					<h3><a href="#">Autonomy Seminar 2023-24</a></h3>
+            					<p>First UGC Autonomy Seminar of the session 2023-24 delivered by Dr. Bharat J. R. Sahu, SOA University, BBSR</p>
+            					<a class="image-popup" href="images/firstAutonomySeminar2023-24.jpeg" title="First UGC Autonomy Seminar 2023-24">
             						<i class="fa fa-search"></i>
             					</a>
             			    </div>
