--- a/gallery.html
+++ b/gallery.html
@@ -329,11 +329,11 @@
 
 			<div class="col-lg-3 col-md-6">
             			<div class="gallery-item">
-            			    <img src="images/ByteQuest.jpeg" alt="Gallery Image" />
+            			    <img src="images/AlumniMeet 2023-24 invitation.jpeg" alt="Gallery Image" />
             			    <div class="gallery-desc">
-            					<h3><a href="#">Byte Quest 1.0</a></h3>
-            					<p>Departmental Quiz Competition before Fresher Party 2023</p>
-            					<a class="image-popup" href="images/ByteQuest.jpeg" title="Byte Quest 1.0 2023">
+            					<h3><a href="#">Alumni Meet-2024</a></h3>
+            					<p>Departmental Alumni Meet invitation</p>
+            					<a class="image-popup" href="images/AlumniMeet 2023-24 invitation.jpeg" title="Alumni Meet Invitation-2024">
             						<i class="fa fa-search"></i>
             					</a>
             			    </div>
