--- a/gallery.html
+++ b/gallery.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zxx">
     
@@ -342,11 +343,11 @@
 
 			<div class="col-lg-3 col-md-6">
             			<div class="gallery-item">
-            			    <img src="images/ByteQuest.jpeg" alt="Gallery Image" />
+            			    <img src="images/Alumni Meet 2023-24.jpeg" alt="Gallery Image" />
             			    <div class="gallery-desc">
-            					<h3><a href="#">Byte Quest 1.0</a></h3>
-            					<p>Departmental Quiz Competition before Fresher Party 2023</p>
-            					<a class="image-popup" href="images/ByteQuest.jpeg" title="Byte Quest 1.0 2023">
+            					<h3><a href="#">Alumni Meeting 2023-24</a></h3>
+            					<p>Departmental Alumni Meet for the session 2023-24</p>
+            					<a class="image-popup" href="images/Alumni Meet 2023-24.jpeg" title="Alumni Meet 2023-24">
             						<i class="fa fa-search"></i>
             					</a>
             			    </div>
@@ -354,11 +355,11 @@
             		</div>
             		<div class="col-lg-3 col-md-6">
             			<div class="gallery-item">
-            			    <img src="images/gallery/1.jpg" alt="Gallery Image" />
+            			    <img src="images/alumnimeet2.jpeg" alt="Gallery Image" />
             			    <div class="gallery-desc">
-            					<h3><a href="#">Photo Title Here</a></h3>
-            					<p>There are many variations of Lorem Ipsum available</p>
-            					<a class="image-popup" href="images/gallery/1.jpg" title="Photo Title Here">
+            					<h3><a href="#">Alumni Meeting</a></h3>
+            					<p>Alumni Meeting for the session 2023-24</p>
+            					<a class="image-popup" href="images/alumnimeet2.jpeg" title="Alumni Meet 2023-24">
             						<i class="fa fa-search"></i>
             					</a>
             			    </div>
