--- a/index.html
+++ b/index.html
@@ -395,15 +395,15 @@ With this, I welcome you to be a part of our journey towards being a centre of e
 	                            <div class="event-item-new mb-10">
 	                                <div class="event-date">
 	                                    <div class="vertical-align">
-	                                        <span class="day">20</span>
-	                                        <span class="month">Nov</span>
+	                                        <span class="day">07</span>
+	                                        <span class="month">Jan</span>
 	                                    </div>
 	                                </div>
 	                                <div class="event-des">
 	                                    <h4 class="title">
-	                                        Upcoming National Conference
+	                                        Alumni Meet-2024
 	                                    </h4>
-	                                    <p>A National Conference will be organized by department in the month of Nov(Tentatively)</p>
+	                                    <p>Alumni Meet for the session 2023-24</p>
 
 	                                </div>
 	                            </div>
