--- a/index.html
+++ b/index.html
@@ -407,6 +407,21 @@ With this, I welcome you to be a part of our journey towards being a centre of e
 
 	                                </div>
 	                            </div>
+					<div class="event-item-new mb-10">
+	                                <div class="event-date">
+	                                    <div class="vertical-align">
+	                                        <span class="day">04</span>
+	                                        <span class="month">July</span>
+	                                    </div>
+	                                </div>
+	                                <div class="event-des">
+	                                    <h4 class="title">
+	                                        Seminar Talk Series
+	                                    </h4>
+	                                    <p>Seminar talk series 2024-25</p>
+
+	                                </div>
+						
 	                            <div class="apply-box text-center">
                                     <a href="#">View All</a>
                                 </div>
